# routes/user.js
@@ -7,12 +7,7 @@ const uploadImg = require("../middleware/uploadImg");
 
 router.get("/getCurrent", jwtAuth, userController.getCurrentUser);
 router.get("/", jwtAuth, accessControl, userController.getUserList);
-router.patch(
-  "/toggleActive/:id",
-  jwtAuth,
-  accessControl,
-  userController.toggleActiveUser
-);
+router.patch("/:id", jwtAuth, accessControl, userController.toggleActiveUser);
 router.patch(
   "/updateOne/:id",
   jwtAuth,
